# chimlang

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  START-HERE.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: __init__.py  app.py  auth.py  dashboard.py  mcp_server.py  models.py  render.py
config/: pii_allowlist.yaml  pricing.yaml
core/: __init__.py  appsettings.py  config.py  db.py  experiment_store.py  observability.py  population_store.py  product_policy.py  production_readiness.py  project_store.py  rehearsal_store.py  run_context.py  run_events.py  run_manifest.py  run_quality.py  runstore.py  safe_fetch.py  secretbox.py  tasks.py  text.py  validation_store.py
docs/: FUTURE-WORK.md  PHASE0-BRIEF.md  PHASE1-BRIEF.md  PHASE2-BRIEF.md  PHASE3-BRIEF.md  PHASE4-BRIEF.md  PHASE5-BRIEF.md  PHASE6-BRIEF.md  PHASE7-BRIEF.md  PHASE8-BRIEF.md  PHASE9-BRIEF.md  PRD-SANAM.md  STATE.md  TECH-DECISIONS.md
governance/: __init__.py  election.py  gallery.py  pdf.py  pii.py  rbac.py  store.py  watchlist.py  watermark.py  webhook.py
graphlayer/: __init__.py  extraction.py  ingest.py  normalize.py  store.py  summary.py  waterfall.py
scripts/: build_benchmark_page.py  calibrate_fabric.py  check_worker_readiness.py  cleanup_dev_data.py  db_migrations.py  demo_citizen_portal.py  demo_voice_round.py  export_openapi.py  ingest_corpus.py  live_workflow.py  measure_scale.py  plan_run.py  production_readiness.py  production_soak.py  resolve_predictions.py  run_fab01_benchmark.py  run_game.py  run_hindcast_batch.py  run_leak_test.py  run_living_world.py  run_miracl_th.py  run_model_robustness.py  run_phase8_benchmarks.py  run_redteam.py  run_rehearsal.py  run_warroom.py  run_whatif.py  thai_benchmark.py  wait_for_readiness.py
simulation/: __init__.py  ask.py  channels.py  citizen.py  compare.py  debate.py  debate_protocol.py  engine.py  engines.py  experiment.py  fidelity.py  game.py  influence.py  media.py  memory.py  newsdesk.py  persona.py  persona_ai.py  persona_packs.py  provenance.py  redteam.py  redteam_population.py  reflection.py  rehearsal.py  report.py  sources.py  tipping.py  voice.py  warroom.py
tests/: conftest.py  test_auth.py  test_calibration.py  test_calibration_api.py  test_citizen.py  test_config.py  test_cost_guard.py  test_dashboard.py  test_election_rbac.py  test_experiment.py  test_experiment_workspace.py  test_feature_removal.py  test_gallery.py  test_game.py  test_governance_hooks.py  test_graph_insights.py  test_graphlayer.py  test_hindcast_filters.py  test_hindcast_loader_and_leaktest.py  test_hindcast_predictor.py  test_jobs.py  test_leaktest_hardening.py  test_living_memory.py  test_llm_adapter.py  test_m6_nfr.py  test_mcp_server.py  test_newsdesk.py  test_normalize.py  test_openapi_export.py  test_p1m3.py  test_p2m6.py  test_pdf_export.py  test_persona_packs.py  test_phase6.py  test_phase8_m5.py  test_phase9_m1.py  test_phase9_m2_m3.py  test_pii_detector.py  (+17 more)
web/: README.md  (+7 more)
(+200 files in other folders)
