[project]
name = "chimlang"
version = "0.0.1"
description = "ชิมลาง — AI social simulation platform (Phase 0)"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.3",
    "fastapi>=0.139.0",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "neo4j>=6.2.0",
    "openai>=1.60",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "uharfbuzz>=0.55.0",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.139.0",
    "pypdf>=6.14.2",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "simulation", "graphlayer", "trust", "governance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # starlette TestClient เตือนให้ย้ายไป httpx2 — ไม่กระทบการทำงาน Phase 1
    "ignore::DeprecationWarning:starlette.testclient",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# B008: Depends() ใน argument default คือ pattern มาตรฐานของ FastAPI — ไม่ใช่บั๊ก
"api/**" = ["B008"]
